# march-madness-ml

./: .env  .gitignore  README.md  TeamSeasons.csv  Teams.py  basic_eda.ipynb  build_features.py  cli.py  cluster.py  eda.py  feature_engineering.py  fill_submission.py  gb_clf.sav  model.sav  model_trainer.py  objects.py  phase1.csv  play_style.csv  predict_games.py  pyproject.toml  requirements.txt  sample.csv  team_ids.json  train_model.py  utilities.py  write_data.py
Archives/2019/: README.md  Teams.py  model_2019.sav  predict_games.py  write_data.py
Archives/2021/: build_features.py  fill_submission.py  objects.py  predict_games.py  train_model.py  utilities.py
Models/: grid_poly_selected.sav
Models/21fe4abb-c389-498b-885f-6a90f199acdb/: grid_xgb.sav  scaler.pkl
Notebooks/: add_results.ipynb  base_2025.json  basic_eda.ipynb  clf_2025.json  cluster_eda.ipynb  explore_torvik.ipynb  export_tourney.ipynb  matchup_model.ipynb  model_inspection.ipynb  nn_2025.json  play_style_stats.ipynb  res.csv  similar_team_names.json  similarity_eda.ipynb  teamSeeds.json  team_tags.ipynb  tourneySlots.json  tourney_seed_perf.ipynb  upsets.ipynb  validate_adj_stats.ipynb
Results/: 2021_Stage2_grid_linear.csv  2021_Stage2_grid_poly.csv  gb_clf.sav  grid_linear.sav  grid_linear_selected.sav  grid_poly_2.sav  model.sav  poly_model.sav  results_2015.json  results_2016.json  results_2017.json  results_2018.json  results_2019.json  second_round_misses.csv
TrainingData/: phase1_2016.csv  phase1_2017.csv  phase1_2018.csv
data/: teamspellings.csv
scripts/: mc_valid.json  torvik.py
(+15061 files in other folders)
