[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm_analytics"
version = "0.1.0"
authors = [
    { name = "Andrew Growney" }
]
description = "March Madness Analytics Tools: A collection of tools for analyzing March Madness data"
requires-python = ">=3.6"


